--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -3,6 +3,7 @@
   background-size: cover;
   background-position: left;
   background-repeat: no-repeat;
-  width: 100%;
+  width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }/*# sourceMappingURL=Home.module.css.map */
