--- a/src/pages/Home.module.scss
+++ b/src/pages/Home.module.scss
@@ -4,6 +4,8 @@
     background-position: left;
     background-repeat: no-repeat;
 
-    width: 100%;
+
+    width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
